finish auto regressive models

--- a/main.tex
+++ b/main.tex
@@ -23,8 +23,9 @@
 \input{deep-learning.tex}
 \input{cnn.tex}
 \input{fcnn.tex}
-\input{recurrent-nn.tex}
+\input{RNN.tex}
 \input{VAE.tex}
+\input{AR.tex}
 
 \end{multicols*}
 \end{landscape}
