--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,10 @@
 \input{VAE.tex}
 \input{AR.tex}
 \input{NormalizingFlow.tex}
+\input{GAN.tex}
+\input{PBM.tex}
+\input{NIR.tex}
+\input{RL.tex}
 
 \end{multicols*}
 \end{landscape}
