--- a/VAE.tex
+++ b/VAE.tex
@@ -174,6 +174,7 @@ $= \frac{1}{2} \sum^J_i (1+ \log(\sigma_j^2) - \mu_j - \sigma_j^2),$ if $q \sim 
 	\end{Figure}
 \end{comment}
 
+\textbf{Faces:} generated faces are typically blurry\\
 
 
 
