--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,8 @@
 \raggedcolumns
 
 % add documents here, add \newpage in comment environment
-\input{template.tex}
 \input{intro.tex}
-\input{deep-learning.tex}
+%\input{deep-learning.tex}
 \input{cnn.tex}
 \input{fcnn.tex}
 \input{RNN.tex}
