--- a/GAN.tex
+++ b/GAN.tex
@@ -3,6 +3,8 @@
 \end{comment}
 
 \section{Generative Adversarial Networks}
+\textbf{Imperfect Model:} High LL can result in bad samples and vv\\
+memorise training data (-LL), high noise samples (+LL)\\
 \begin{comment}
 	\textbf{Question:} Is likelihood a good indicator for the quality of samples?\\
 	It has been shown that with imperfect models a high likelihood does not imply good sample quality.\\
@@ -17,6 +19,7 @@
 
 \textbf{Generator:} map $z \in \R^Q$ to observ. $x \in \R^D$, $G: \R^Q \rightarrow \R^D$\\
 \textbf{Discriminator:} trained on $\whx$ and $x$, $D: \R^D \rightarrow [0,1]$\\
+No markov chain necessary\\
 \begin{comment}
 	The discriminator can be thought of as learned loss-function.
 \end{comment}
@@ -55,14 +58,13 @@ $f(x) = a \log x + b \log (1-x) \in [0,1]$ has max at $\frac{a}{a+b}$\\
  		\captionof{figure}{GAN Generator objective}
 	\end{Figure}
 \end{comment}
-\todo{Why is this true?}\\
 
 \textbf{Assumption:} capacity, $D \rightarrow D^*$, opti. $p_{model}$\\
 \begin{comment}
 	G and D have enough capacity, descriminator reaches $D^*$ in every outer iteration, we optimize $p_{model}$ instead of parameters of the model\\
 \end{comment}
 
-\textbf{Mode Collapse:} $G$ figures out one sample that works, $D$ fails to reject\\
+\textbf{Mode Collapse:} $G$ finds one mode, $D$ fails to reject\\
 \begin{comment}
 	This reduces the set of generated examples, since G has a gold-shitting donkey. 
 	If D doesn't figure out to reject it, the next iteration of G again uses it.
@@ -77,3 +79,12 @@ $f(x) = a \log x + b \log (1-x) \in [0,1]$ has max at $\frac{a}{a+b}$\\
  		\captionof{figure}{GAN Mode collapse}
 	\end{Figure}
 \end{comment}
+
+\textbf{Oscillation:} limited capacity and not $D^*$\\
+
+\textbf{Wasserstein:} work to similarity; +no collapse, +stable\\
+
+\textbf{Cons:} no explicit $p(x)$, nor sample LL, carful balancing, less theory\\ 
+
+
+
