--- a/fcnn.tex
+++ b/fcnn.tex
@@ -8,11 +8,14 @@
 	This limitation comes from the fully connected layers in the end.\\
 \end{comment}
 
-\textbf{Goal:} Pixel-to-pixel classification
+\textbf{Semantic segment.:} extract patch, run through cnn, classify\\
++ size independen, - only local context
 \begin{comment}
-	By removing the size constraints of the input pictures allows us to classify pixels by using their local neighbourhood.\\
-	\textbf{Drawback:} We don't get the information of the whole context.\\
-	The basic approach is using a standard CNN to learn features of the input image (encoding), which is followed by a decoder who projects the learned features to the higher resolution pixel space.\\
+	We extract each patch and run it through a CNN. 
+	This let's us classify a pixel by it's local neighbourhood, but we loose the whole context of the pixel, as we are not looking at the whole image anymore.\\
+	\textbf{Approach:} learn features of the input image (encoding), which is followed by a decoder who projects the learned features to the higher resolution pixel space.
+	We get rid of the fully connected layer at the end of the network.\\
+	
 	\begin{Figure}
  		\centering
  		\includegraphics[width=\linewidth]{graphic/fcnn-semantic-segmentation-pipeline}
@@ -20,11 +23,11 @@
 	\end{Figure}
 \end{comment}
 
-\textbf{Low-res:} due to all the pooling and down-sampling\\
+\textbf{Downsample:} pooling or strides, otherwise very expensive\\
 \begin{comment}
-	This results in low resolution and fuzzy object boundaries.
-	Newer architectures can mitigate this by upsampling again.\\
-	The learned features on each downsampled level are copied to the upsampling (decoding) stream, to give the fcnn a chance to include features of different levels.\\ 
+	Downsampling helps with performance, as not the whole image is run through convolutions.
+	But, it results in low resolution and fuzzy object boundaries.
+	Newer architectures can mitigate this by copying the learned features from the downsampling stage into the upsampling stage.\\
 	
 	\begin{Figure}
  		\centering
@@ -33,7 +36,7 @@
 	\end{Figure}
 \end{comment}
 
-\textbf{Upsampling (NN):} copy value for the whole output\\ 
+\textbf{Nearest Neighbor:} copy value to the whole output\\ 
 \begin{comment}
 	Upsampling can be seen as interpolation, increasing the resolution of the signal.\\
 	
@@ -44,7 +47,7 @@
 	\end{Figure}
 \end{comment}
 
-\textbf{Bed-of-nails:} zero all outputs but one copy of input
+\textbf{Bed-of-nails:} zero all outputs but one copy of input\\
 \begin{comment}
 	\begin{Figure}
  		\centering
@@ -53,7 +56,7 @@
 	\end{Figure}
 \end{comment}
 
-\textbf{Max-Unpooling:} remember max pooling, BOF to that location\\
+\textbf{Max-unpooling:} remember max element from downsampling, use that in upsampling\\
 \begin{comment}
 	\begin{Figure}
  		\centering
@@ -62,7 +65,7 @@
 	\end{Figure}
 \end{comment}
 
-\textbf{Transpose Conv:} input gives (learnable) weight for filter\\
+\textbf{Learnable Upsampling:} input as weight, add up filters in output\\
 \begin{comment}
 	\begin{Figure}
  		\centering
@@ -71,9 +74,9 @@
 	\end{Figure}
 \end{comment}
 
-\textbf{UNet:} TransCov + Skip connections\\
+\textbf{UNet:} copy early stage tensors to upsampling, combines local and global feature maps\\
 \begin{comment}
-	Main idea: combine global and local feature maps by copying corresponding tensors from earlier stages.\\
+	Main idea: combine global and local feature maps by copying corresponding tensors from earlier stages into later stages.\\
 	Also, the downsampling information is pretty shallow, upsampling performance is improved when including "pre-downsamplin" information.\\
 
 	\begin{Figure}
