--- a/intro.tex
+++ b/intro.tex
@@ -54,6 +54,9 @@
 	Batch is doing one update per epoch, inefficient if there are a lot of samples in the dataset\\
 \end{comment}
 
+\textbf{Quotient rule:} $(\frac{f}{g})' = \frac{fg' - f'g}{g^2}$ 
+\textbf{Product:} $fg = f'g + fg'$\\
+
 
 
  
