--- a/preamble.sty
+++ b/preamble.sty
@@ -14,7 +14,7 @@
 
 % PARAMETER TO SHOW COMMENTS
 \newtoggle{showcomments}
-\toggletrue{showcomments}
+\togglefalse{showcomments}
 
 % landscape 
 \usepackage{pdflscape}
