--- a/RNN.tex
+++ b/RNN.tex
@@ -22,6 +22,7 @@
 
 \textbf{RNN:} $\why = W_{h} h^t$, $h^t = tanh(W [h^{t-1}, x^t])$,\\ $h\in \R^n, W \in \R^{[n \times 2n]}$
 + variable sequence length\\
+\textit{Classification error:} $L = \sum_t - \sum_k y_{t,k} \log \why_{t,k}$\\
 \begin{comment}
 	\textbf{Goal:} Learn transition function knowing what's worth keeping.
 	Tanh is important, otherwise we can't forget information.\\
